syntax = "proto3";
package gitopia.gitopia.gitopia.v2;

option go_package = "github.com/gitopia/gitopia/x/gitopia/migrations/v2";

import "gogoproto/gogo.proto";

message Whois {
  string creator = 1;
  uint64 id = 2;
  string name = 3;
  string address = 4; 
  OwnerType ownerType = 5;
}

enum OwnerType {
  USER = 0;
  DAO = 1;
}
